Use newer Wild Web Developer/LemMinx/LemMinX-Maven
And adapt how settings are passed to LS (hierarchical)

Change-Id: I9e10115fdc0842c0e7d8944afab079953d2a0f3c
Signed-off-by: Mickael Istria <mistria@redhat.com>